@@ -70,7 +70,7 @@ from my_build_ext import build_ext
 
 setup(
     name="greenlet",
-    version='0.4.10.dev',
+    version='0.4.10',
     description='Lightweight in-process concurrent programming',
     long_description=readfile("README.rst"),
     maintainer="Alexey Borzenkov",
